--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,6 +1,6 @@
 [preset.0]
 
-name="Android"
+name="BrickGodot"
 platform="Android"
 runnable=true
 dedicated_server=false
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="Builds/BuildNew.apk"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -18,7 +18,7 @@ encrypt_directory=false
 
 custom_template/debug=""
 custom_template/release=""
-gradle_build/use_gradle_build=false
+gradle_build/use_gradle_build=true
 gradle_build/export_format=0
 gradle_build/min_sdk=""
 gradle_build/target_sdk=""
@@ -28,8 +28,8 @@ architectures/x86=false
 architectures/x86_64=false
 version/code=1
 version/name=""
-package/unique_name="com.example.$genname"
-package/name=""
+package/unique_name="com.congogames.brickgodot"
+package/name="BrickGodot"
 package/signed=true
 package/app_category=2
 package/retain_data_on_uninstall=false
